--- a/WEBSITE/assets/css/main.css
+++ b/WEBSITE/assets/css/main.css
@@ -207,6 +207,12 @@ li {
 
 	@media screen and (max-width: 980px) {
      
+        .circle {
+            float: left;
+            max-width: 120px;
+            text-align: center;
+        }
+        
 		.container.\31 25\25 {
 			width: 100%;
 			max-width: 112.5%;
@@ -2375,6 +2381,7 @@ li {
                  
             #infoWrapper {
                 padding: 0px;
+                padding-top: 290px !important;
 			}  
         
             form{
